# dqmagic

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  cleanup.win  config.h.in  configure  configure.ac
R/: RcppExports.R  dqmagic-package.R  zzz.R
docs/: LICENSE-text.html  LICENSE.html  authors.html  index.html
docs/news/: index.html
docs/reference/: dqmagic-package.html  file_type.html  index.html  magicPathDefault.html  magicVersion.html
man/: dqmagic-package.Rd  file_type.Rd  magicPathDefault.Rd  magicVersion.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  file.cpp  magic.cpp
src/libgnurx/: gnurx_internal.h  regex.c  regex.h  regex_internal.h
src/libmagic/: config.h
tests/: testthat.R
tests/testthat/: test-file.R  test-magicfile.R
tests/testthat/sample/: foo.html  foo.xls  foo.xlsx
